Update construction of primitive objects